# video_motion_compensation

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
data/: IMG_4914.MOV
include/: Config.hpp
src/: GrayscaleConverter.cpp  GrayscaleConverter.hpp  Logger.cpp  Logger.hpp  Main.cpp
